--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "ejs-mate": "^4.0.0",
     "express": "^4.21.1",
     "method-override": "^3.0.0",
-    "mongoose": "^8.7.1"
+    "mongoose": "^8.7.1",
+    "nodemailer": "^6.9.16"
   }
 }
