--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "express": "^4.21.1",
     "method-override": "^3.0.0",
     "mongoose": "^8.7.1",
-    "nodemailer": "^6.9.16"
+    "nodemailer": "^6.9.16",
+    "passport-local-mongoose": "^8.0.0"
   }
 }
