--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
+    "axios": "^1.7.9",
+    "body-parser": "^1.20.3",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^5.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "ejs-mate": "^4.0.0",
-    "express": "^4.21.1",
+    "express": "^4.21.2",
     "express-session": "^1.18.1",
     "method-override": "^3.0.0",
     "mongoose": "^8.7.1",
     "nodemailer": "^6.9.16",
+    "openai": "^4.82.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0"
